--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
